fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 * {
   min-width: 0;
-  overflow: auto;
+  overflow: hidden;
   margin: 0;
   padding: 0;
 }
@@ -607,8 +607,6 @@ input, textarea, button {
     --accent-disabled: 178 178 178;
     --accent-disabled-hover: 96 96 96;
   }
-  
-  
 }
 
 
@@ -673,3 +671,14 @@ div{
 .animation-delay-400 {
   animation-delay: 400ms;
 }
+
+section{
+  overflow-y: hidden;
+}
+
+
+
+span, h1, h2, h3, h4, h5, h6{
+  overflow-y: hidden;
+}
+
